# casper-proofpay-agent

./: .gitignore  404.html  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  pages.yml
_next/static/chunks/: 0-lygin1g2l-s.js  0hzvuaasi4_9j.js  42lv0lcypbbr3.css  turbopack-19z4db96wy1cz.js
apps/web/: next.config.ts  package.json  tsconfig.json  vercel.json
apps/web/scripts/: check-dashboard-layout.mjs
apps/web/src/app/: globals.css  (+2 more)
contracts/proofpay-attestation/: Cargo.toml  README.md  odra-module-sketch.rs
contracts/proofpay-attestation/src/: main.rs
docs/: buidl-submission-brief.md  casper-cli-runbook.md  casper-testnet.md  demo-recording-workflow.md  demo-script.md  fullstack-hosting.md  hackathon-constraints.md  judge-entry.md  judge-proof-pack.md  next-iteration-agent-brief.md  real-case-execution.md  real-case-runbook.md  real-world-use.md  submission-checklist.md  submission-verification-log.md
docs/demo/: proofpay-agent-demo-narration.txt
docs/superpowers/plans/: 2026-06-23-proofpay-agent-implementation.md  2026-06-24-audit-dossier-implementation.md  2026-06-24-casper-verification-ui-implementation.md  (+2 more)
examples/: real-case-template.json  video-integrated-cold-chain-real-case.json
scripts/: build-contract.sh  check-casper-testnet.sh  check-submission-clean.mjs  deploy-casper-testnet.sh  deploy-real-case-testnet.sh  export-attestation-payload.ts  prepare-github-pages.mjs  prepare-real-case.ts  print-casper-deploy-command.sh  print-real-case-deploy-command.sh  publish-github-pages.sh  smoke-fullstack-api.ts
(+22 files in other folders)
