[package]
name = "proofpay-attestation"
version = "0.1.0"
edition = "2021"
description = "Casper Testnet attestation contract for ProofPay Agent milestone decisions."
autobins = false

[lib]
crate-type = ["cdylib"]
path = "src/main.rs"

[dependencies]
casper-contract = { version = "5.1.1", default-features = false }
casper-types = "6.0.1"
wee_alloc = "0.4.5"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
